tests/cases/meta/ok/macro-token-tree-syntax.ari
@cfg(false)
make_item!(fn generated_item() -> i64 {
  let value = make_tokens!({ nested([1, 2, 3]) });
  return value;
});

@cfg(false)
fn generated() -> i64 {
  let tokens = make_tokens!(fn generated_value(arg) -> i64 {
    return arg;
  });
  return 0;
}

fn main() -> i64 {
  return 0;
}
