tests/cases/meta/errors/matches-macro-arity.ari
fn main() -> i64 {
  if matches!(1) {
    return 1;
  }
  return 0;
}
